[Adjust]destroy buttom

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,4 +2,5 @@
 <p><strong>Title</strong> <%= @book.title %> </p>
 <p><strong>Body</strong> <%= @book.body %> </p>
 <%= link_to "Edit", edit_book_path(@book) %>
-<%= link_to "Back", book_path %>
+
+<%= link_to "Back", book_path(@book) %>
