--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,6 +10,7 @@
   <tr>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
+    <td><%= link_to "削除", book_path(@book), method: :delete, data: { confirm: "Are you sure？" } %></td>
   </tr>
   <% end %>
 </table>
