--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,6 +6,6 @@
   <%= f.text_area :body %>
   <%= f.submit 'Update Book' %>
   <% end %>
-  <%= link_to 'Show', book_path(@book) %>
+  <%= link_to 'Show', book_path(book) %>
   
-  <%= link_to 'Back', book_path(@book) %>
+  <%= link_to 'Back', book_path(book) %>
