--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,9 +10,11 @@
   <tr>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
-    <td><%= link_to "削除", book_path(@book), method: :delete, data: { confirm: "Are you sure？" } %></td>
-  </tr>
+    <td><%= link_to "Show", book_path(book) %></td>
+    <td><%= link_to "Edit", edit_book_path(book) %></td>
+    <td><%= link_to "destroy", book_path(book), method: :delete, data: { confirm: "Are you sure？" } %></td>
   <% end %>
+  </tr>
 </table>
 
 <h1>New book</h1>
