--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,7 +17,15 @@
   </tr>
 </table>
 
+
+
 <h1>New book</h1>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
 <!-- form_with部分 -->
 <%= form_with model: @book, url:'/books', local:true do |f| %>
   <h4>Title</h4>
