--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,9 @@
-<p>Book was successfully created.</p>
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<% end %>
+</div>
 <p><strong>Title</strong> <%= @book.title %> </p>
 <p><strong>Body</strong> <%= @book.body %> </p>
-<%= link_to "Edit", edit_book_path(book) %>
+<%= link_to "Edit", edit_book_path(@book.id) %>
 
-<%= link_to "Back", book_path(book) %>
+<%= link_to 'Back', books_path %> 
