--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
     <th>title</th>
     <th>body</th>
   </tr>
-  
+
   <% @books.each do |book| %>
   <tr>
     <td><%= book.title %></td>
@@ -21,10 +21,14 @@
 
 <h1>New book</h1>
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <% @book.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
+  <div id="error_explanation" class="alert alert-danger">
+  <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 <!-- form_with部分 -->
 <%= form_with model: @book, url:'/books', local:true do |f| %>
