--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,105 @@
  *= require_tree .
  *= require_self
  */
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,p,ul{
+  font-family: verdana, arial, helvetica, sans-serif;
+}
+
+body {
+  background-color: #fff;
+  color: #333;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
+
+h1{
+  margin: 17.42px 0px;
+}
+
+p{
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+}
+
+a{
+  color: #666666;
+}
+
+ul{
+  padding:0px 0px 0px 40px;
+  margin:33px;
+  height: 36px;
+  width: 384px;
+}
+
+h2{
+  margin: 16.185px 0px;
+}
+
+input#book_title{
+  padding: 1px 2px
+}
+
+textarea#book_body{
+  padding: 2px;
+}
+
+table {
+  color: #333333;
+}
+
+th {
+  padding:1px 1px 5px;
+}
+td {
+  padding: 1px 5px 7px;
+}
+
+
+.block,.submit,.edit-submit {
+  margin-bottom: 10px;
+}
+
+.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+#error_explanation {
+  width: 468px;
+  height: 134px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+#error_explanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: -7px -7px 0px;
+  background-color: #c00;
+  color: #fff;
+}
+#error_explanation ul li {
+  font-size: 12px;
+  list-style: square;
+}
+label {
+  display: block;
+}
+
+.create-btn,.update-btn{
+  padding:1px 6px;
+}
