--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,12 +10,17 @@
   </div>
 <% end %>
 <%= form_with model:@book, local: true do |f| %>
-  <h4>Title</h4>
+  <div class="block">
+  <label for="book_title">Title</label>
   <%= f.text_field :title %>
-  <h4>Body</h4>
+</div>
+<div class="block">
+  <label for="book_body">Body</label>
   <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
-  <% end %>
-  <%= link_to 'Show', book_path(@book.id) %>
+</div>
+ <div class="edit-submit"><%= f.submit 'Update Book', class: 'update-btn' %></div>
+<% end %>
 
+  <%= link_to 'Show', book_path(@book.id) %>
+|
   <%= link_to 'Back', books_path %>
