--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,27 +2,24 @@
 
 <table>
   <tr>
-    <th>title</th>
-    <th>body</th>
+    <th>Title</th><th>Body</th>
   </tr>
 
   <% @books.each do |book| %>
   <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <td><%= link_to "Show", book_path(book) %></td>
-    <td><%= link_to "Edit", edit_book_path(book) %></td>
-    <td><%= link_to "destroy", book_path(book), method: :delete, data: { confirm: "Are you sure？" } %></td>
-  <% end %>
+    <td><%= book.title %></td><td><%= book.body %></td><td class="button"><%= link_to "Show", book_path(book) %></td><td class="button"><%= link_to "Edit", edit_book_path(book) %></td><td class="button"><%= link_to "destroy", book_path(book), method: :delete, data: { confirm: "Are you sure？" } %></td>
   </tr>
+  <% end %>
 </table>
 
 
 
-<h1>New book</h1>
+<h2>New book</h2>
 <% if @book.errors.any? %>
   <div id="error_explanation" class="alert alert-danger">
-  <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+   <h2>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+   </h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -32,9 +29,13 @@
 <% end %>
 <!-- form_with部分 -->
 <%= form_with model: @book, url:'/books', local:true do |f| %>
-  <h4>Title</h4>
+<div class="block">
+  <label for="book_title">Title</label>
   <%= f.text_field :title %>
-  <h4>Body</h4>
+</div>
+<div class="block">
+  <label for="book_body">Body</label>
   <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
+</div>
+<div class="submit"><%= f.submit 'Create Book', class: 'create-btn' %></div>
 <% end %>
