--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,11 +1,9 @@
-<body>
-
 <h1>ようこそ <strong>Bookers</strong>  へ!</h1>
 
-<div><p><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p></div>
+<p><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
 
-<div><p>印象を共有し交換することができます</p></div>
+<p>印象を共有し交換することができます</p>
 
-<div><a href="/books">start</a></div>
+<p><a href="/books">start</a></p>
 
-</body>
+</div>
