--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,26 +1,28 @@
 <h1>Editing Book</h1>
-<% if @book.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-  <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+
+　<% if @book.errors.any? %>
+<div id="error_explanation" class="alert alert-danger">
+  　<h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
-  </div>
+</div>
 <% end %>
+
+
 <%= form_with model:@book, local: true do |f| %>
-  <div class="block">
+<div class="block">
   <label for="book_title">Title</label>
   <%= f.text_field :title %>
 </div>
+
 <div class="block">
   <label for="book_body">Body</label>
   <%= f.text_area :body %>
 </div>
- <div class="edit-submit"><%= f.submit 'Update Book', class: 'update-btn' %></div>
+<div class="edit-submit"><%= f.submit 'Update Book', class: 'update-btn' %></div>
 <% end %>
 
-  <%= link_to 'Show', book_path(@book.id) %>
-|
-  <%= link_to 'Back', books_path %>
+<%= link_to 'Show', book_path(@book.id) %>|<%= link_to 'Back', books_path %>
