--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,11 +15,10 @@
 
 
 <h2>New book</h2>
+
 <% if @book.errors.any? %>
   <div id="error_explanation" class="alert alert-danger">
-   <h2>
-    <%= @book.errors.count %> errors prohibited this book from being saved:
-   </h2>
+   　<h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -29,13 +28,16 @@
 <% end %>
 <!-- form_with部分 -->
 <%= form_with model: @book, url:'/books', local:true do |f| %>
+
 <div class="block">
   <label for="book_title">Title</label>
   <%= f.text_field :title %>
 </div>
+
 <div class="block">
   <label for="book_body">Body</label>
   <%= f.text_area :body %>
 </div>
+
 <div class="submit"><%= f.submit 'Create Book', class: 'create-btn' %></div>
 <% end %>
